# bloomfs

./: .gitignore  LICENSE  README.md  go.mod  go.sum
alloc/: bitmap.go  bitmap_test.go
block/: device.go  device_test.go  file.go  unbuffered.go  unbuffered_linux.go  unbuffered_other.go  unbuffered_windows.go
cmd/bloomfs/: main.go
cow/: cow.go  cow_test.go  uberblock.go
dedup/: serialize.go  table.go  table_test.go
dir/: adaptive_test.go  directory.go  directory_test.go  segment.go  tuning_test.go
docs/: PLAN-next.md  PORTING.md  SPEC.md
fs/: access_test.go  append_test.go  archivebench_test.go  bench_test.go  dirops_test.go  fixes_test.go  fs.go  fs_test.go  gate_test.go  inodeformat_test.go  inodefree_test.go  posix_test.go  readdir_test.go  records_test.go  stat_test.go  symlink_test.go  timestamp_test.go
fusefs/: fusefs.go
globalfilter/: bench_test.go  filter.go  filter_test.go  gate.go
inode/: inode.go  inode_test.go  store.go  store_test.go  table.go  table_test.go
layout/: superblock.go  superblock_test.go
rust/: Cargo.toml
rust/bloomfs-alloc/: Cargo.toml
rust/bloomfs-alloc/src/: lib.rs
rust/bloomfs-block/: Cargo.toml
rust/bloomfs-block/src/: lib.rs
rust/bloomfs-bloom/: Cargo.toml
rust/bloomfs-bloom/src/: lib.rs
rust/bloomfs-cli/: Cargo.toml
rust/bloomfs-cli/src/: main.rs
rust/bloomfs-cow/: Cargo.toml
rust/bloomfs-cow/src/: lib.rs
rust/bloomfs-dedup/: Cargo.toml
rust/bloomfs-dedup/src/: lib.rs
rust/bloomfs-dir/: Cargo.toml
rust/bloomfs-dir/src/: lib.rs
rust/bloomfs-fs/: Cargo.toml
rust/bloomfs-fs/benches/: fs_bench.rs
rust/bloomfs-fs/src/: lib.rs
rust/bloomfs-fuse/: Cargo.toml
rust/bloomfs-fuse/src/: lib.rs
rust/bloomfs-inode/: Cargo.toml
rust/bloomfs-inode/src/: lib.rs
rust/bloomfs-store/: Cargo.toml
rust/bloomfs-store/src/: lib.rs
store/: blockstore.go  blockstore_test.go  ref.go
