[package]
name = "bloomfs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "BloomFS command-line tool: format and mount a BloomFS image (Stage E)."

[[bin]]
name = "bloomfs"
path = "src/main.rs"

[dependencies]
bloomfs-block = { path = "../bloomfs-block" }
bloomfs-fs = { path = "../bloomfs-fs" }
bloomfs-fuse = { path = "../bloomfs-fuse" }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
libc = "0.2"
