[package]
name = "bloomfs-cow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "BloomFS Copy-on-Write durability layer: ping-pong uberblock + [bitmap|ddt|inode] metadata snapshot, atomic commit."

[dependencies]
bloomfs-block = { path = "../bloomfs-block" }
bloomfs-alloc = { path = "../bloomfs-alloc" }
bloomfs-dedup = { path = "../bloomfs-dedup" }
bloomfs-inode = { path = "../bloomfs-inode" }
blake3 = "1"
