[package]
name = "bloomfs-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "BloomFS data-path pipeline: hash -> dedup -> compress (zstd) -> encrypt (AES-XTS) -> write, with end-to-end integrity check."

[dependencies]
bloomfs-block = { path = "../bloomfs-block" }
bloomfs-alloc = { path = "../bloomfs-alloc" }
bloomfs-dedup = { path = "../bloomfs-dedup" }
blake3 = "1"
zstd = "0.13"
aes = "0.9"
xts-mode = "0.6"
